tests/fsharp/typecheck/sigs/neg115.bsl

neg115.fs(6,9,6,17): parse error FS0525: An integer for loop must use a simple identifier
