tests/fsharp/typecheck/sigs/neg115.fs

module M

    let foo x = x

    for i foo 12 = 1 to 20 do 
        printfn "%d" i
        